# segmcoint

./: README.md  pyproject.toml
docs/: _config.yml  index.html  notebook.html
docs/downloads/: Copy_of_Killian.xlsx  segmented_cointegration_kilian.ipynb
examples/: example_basic.py
segmcoint/: __init__.py  kim2003.py  martins_rodrigues2022.py  simulation.py  utils.py
segmcoint.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: test_segmcoint.py
