[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "segmcoint"
version = "1.0.0"
description = "Tests for Segmented Cointegration: Kim (2003) and Martins & Rodrigues (2022)"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [
    {name = "Dr Merwan Roudane", email = "merwanroudane920@gmail.com"},
]
keywords = [
    "cointegration",
    "segmented cointegration",
    "unit root",
    "structural breaks",
    "time series",
    "econometrics",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Scientific/Engineering",
]
dependencies = [
    "numpy>=1.21",
    "scipy>=1.7",
    "pandas>=1.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "matplotlib>=3.5",
]

[project.urls]
Homepage = "https://github.com/merwanroudane/segmcoint"
Repository = "https://github.com/merwanroudane/segmcoint"
Issues = "https://github.com/merwanroudane/segmcoint/issues"

[tool.setuptools.packages.find]
include = ["segmcoint*"]
